# sentinel

./: SENTINEL PRD v1.0.docx  pyproject.toml
sentinel/application/contain/: block_tool_call.py  contain_blast_radius.py  generate_forensic_bundle.py  isolate_agent.py  rotate_credentials.py
sentinel/application/detect/: analyse_trajectory.py  detect_coordination_anomaly.py  detect_model_integrity.py  detect_prompt_injection.py  evaluate_tool_call.py
sentinel/application/dtos/: schemas.py
sentinel/application/intercept/: detect_cost_anomaly.py  detect_credential_abuse.py  detect_replay_attack.py  enforce_rate_limit.py  validate_mcp_protocol.py
sentinel/application/orchestration/: dag_orchestrator.py
sentinel/application/recon/: audit_permissions.py  detect_config_drift.py  discover_agents.py  enumerate_mcp_servers.py  map_dependencies.py
sentinel/application/shield/: classify_data.py  detect_exfiltration.py  enforce_data_residency.py  inspect_model_api.py  (+1 more)
tests/application/: test_blast_radius.py  test_config_drift.py  test_coordination_anomaly.py  test_dag_orchestrator.py  test_discover_agents.py  test_enforce_rate_limit.py  test_evaluate_tool_call.py  test_inspect_payload.py  test_isolate_agent.py  test_model_api_inspection.py  test_replay_attack.py
tests/domain/: test_agent.py  test_anomaly_detection.py  test_incident.py  test_metrics.py  test_pii_detection.py  test_threat.py  test_threat_assessment.py  test_value_objects.py
tests/infrastructure/: test_mcp_server.py  test_prompt_injection_classifier.py  test_repositories.py  test_rule_engine.py
(+54 files in other folders)
